# xfusion

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  NOTICE  collect.cmake  xf_conf_extended_template.h  xf_conf_internal.h  xf_conf_kconfig.h  xf_conf_template.h  xf_porting_template.c  xf_porting_template.h  xf_version.h  xtiny.h  xtiny_private.h
components/: Kconfig  collect.cmake  index.md
components/algo/: CMakeLists.txt  xf_arithmetic.c
components/algo/include/: xf_arithmetic.h
components/common/: CMakeLists.txt  xf_err_to_name.c  xf_type_checker.c
components/common/config/: xf_conf_internal.h  xf_conf_kconfig.h
components/common/include/: xf_bit.h  xf_common.h  xf_compiler.h  xf_err.h  xf_macro_definition.h  xf_types.h  xf_version.h
components/dstruct/: CMakeLists.txt  index.md  xf_bitmap.c  xf_deque.c  xf_ringbuf.c
components/dstruct/include/: xf_bitmap.h  xf_deque.h  xf_dstruct.h  xf_list.h  xf_ringbuf.h
components/log/: CMakeLists.txt  xf_log.c
components/log/include/: xf_check.h  xf_log.h
components/std/: CMakeLists.txt  xf_string_builtin.c  xf_string_libc.c
components/std/include/: xf_std.h  xf_string.h
components/system/: collect.cmake
components/system/event/: xf_event.h
components/system/osal/: xf_osal.h
components/system/stimer/: CMakeLists.txt  xf_stimer.c  xf_stimer.h
components/system/task/: CMakeLists.txt  (+1 more)
components/utils/: CMakeLists.txt  todo.md  xf_check.c
env_support/cmake/: version.cmake  xf.cmake
projects/xf_project/: CMakeLists.txt
projects/xf_project/components/cmsis_freertos/: CMakeLists.txt
projects/xf_project/components/cmsis_freertos/CMSIS/RTOS2/FreeRTOS/: .gitignore
projects/xf_project/components/cmsis_freertos/CMSIS/RTOS2/FreeRTOS/Source/: cmsis_os2.c
projects/xf_project/components/cmsis_freertos/osal/: xf_osal.h
projects/xf_project/components/cmsis_freertos/osal/cmsis_rtos2/: DO_NOT_INCLUDE_THIS_FOLDER.md
projects/xf_project/components/freertos/: CMakeLists.txt  FreeRTOS_Posix_Port.c  Kconfig
projects/xf_project/components/freertos/config/: FreeRTOSConfig.h
projects/xf_project/main/: CMakeLists.txt  app_main.c  main.c  project_include.cmake  xf_main.c
projects/xf_project/main/osal/: xf_osal.h
projects/xf_project/main/test_co/: test_co.c  test_co.h  xf_co.c  xf_co.h  xf_co_def.h  xf_event.c  xf_event.h  xf_ps.c  xf_ps.h  xf_ps_def.h  xf_stimer.c  xf_stimer.h  xf_tick.c  xf_tick.h
projects/xf_project/main/xtiny/: test_main.c  xf_event.c  xf_event.h  xf_ps.c  xf_ps.h  xf_stimer.c  xf_stimer.h  xf_task.c  xf_task.h  xf_task_def.h  xf_task_internal.h  xf_tick.h  xtiny.h
src/: xf_conf_internal.h  xtiny.h  xtiny_private.h
src/algo/: index.md  xf_algo.h  xf_arithmetic.c  xf_arithmetic.h
src/common/: CMakeLists.txt  index.md  xf_common.h  xf_common_internal.h  xf_compiler.h  xf_err.h  xf_err_to_name.c  xf_macro_definition.h  xf_type_checker.c
src/dstruct/: index.md  xf_bitmap.c  xf_bitmap.h  xf_deque.h  xf_list.h
src/log/: index.md  xf_log.c  xf_log.h
src/std/: xf_string.h  xf_string_builtin.c  xf_string_libc.c
src/system/: collect.cmake
src/utils/: xf_utils.h
tools/: xf_conf_internal_gen.py
tools/cmake/: utilities.cmake  xf_tools.cmake
tools/format_code/: format_code.cfg
(+26 files in other folders)
